# HANDWRITTEN-TEXT-GENERATION

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.kiro/specs/handwritten-text-generation/: .config.kiro  design.md  requirements.md  tasks.md
handwritten_rnn/: __init__.py  __main__.py  cli.py  dataset.py  generator.py  model.py  preprocessor.py  trainer.py
model/: vocab.json
tests/: test_integration.py  test_smoke.py
